# u8scan

./: .gitignore  CMakeLists.txt  README.md  build_docs.sh  rebuild.sh  run_demos.sh  run_tests.sh
cmake/: u8scan-config.cmake.in
demos/: CMakeLists.txt  u8scan_access_demo.cpp  u8scan_scanning_demo.cpp  u8scan_stl_demo.cpp
demos/multi_module/: CMakeLists.txt  main.cpp
demos/multi_module/module1/: module1.cpp  module1.h
demos/multi_module/module2/: module2.cpp  module2.h
include/u8scan/: u8scan.h
tests/: CMakeLists.txt  u8scan_access_test.cpp  u8scan_copy_test.cpp  u8scan_emoji_test.cpp  u8scan_scanning_test.cpp  u8scan_stl_test.cpp
